feat: add login with jwt
